[project]
name = "linkbay-multitenant"
version = "0.1.0"
description = "Sistema multitenant semplice e scalabile per FastAPI"
authors = [
    {name = "Alessio Quagliara", email = "quagliara.alessio@gmail.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "databases[postgresql]>=0.8.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
redis = ["redis>=4.5.0"]
jwt = ["python-jose[cryptography]>=3.3.0"]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"